--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "mobx": "^4.3.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-strap": "0.0.1",
-    "reactstrap": "^6.0.1"
+    "react-thunk": "^1.0.0",
+    "reactstrap": "^6.0.1",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
